Update Eclipse Update Site to correct build error